adding challenge route, service, component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,10 @@
 	<a [routerLink]="['/contact']">
     Contact Us
   </a>
+  |
+	<a [routerLink]="['/challenge']">
+    Challenge
+  </a>
 </nav>
 
 <main>
