adding challenge group route, adding component, related stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,10 @@
 	<a [routerLink]="['/challenge']">
     Challenge
   </a>
+  |
+	<a [routerLink]="['/challengeGroup']">
+    ChallengeGroup
+  </a>
 </nav>
 
 <main>
